--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,24 @@ p {
 
 /* Container stylings */
 
+@keyframes spin {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
+
+.loader {
+	border: 16px solid #f3f3f3;
+	border-radius: 50%;
+	border-top: 16px solid #3498db;
+	width: 80px;
+	height: 80px;
+	animation: spin 1.5s ease infinite;
+}
+
 .probability-calculator-wrapper {
 	padding: 1rem 2rem;
 	display: flex;
