Changed to show loading icon only if at least 200 dice in the input

--- a/src/App.css
+++ b/src/App.css
@@ -119,6 +119,10 @@ p {
 	margin: 5px 0;
 }
 
+.output-wrapper {
+	min-height: 3em;
+}
+
 /* Specific element stylings */
 
 .face-target-count-name {
