--- a/src/App.css
+++ b/src/App.css
@@ -123,6 +123,37 @@ p {
 	min-height: 3em;
 }
 
+.error-message {
+	box-sizing: border-box;
+	box-shadow: 0 0 15px -2px rgba(0, 0, 0, 0.2);
+	padding: 16px;
+	border-radius: 16px;
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	width: 240px;
+	height: 80px;
+	background-color: #BA3636;
+	color: #fff
+}
+
+.my-node-enter {
+	opacity: 0;
+  }
+  .my-node-enter-active {
+	opacity: 1;
+	transition: opacity 500ms;
+  }
+  .my-node-exit {
+	opacity: 1;
+  }
+  .my-node-exit-active {
+	opacity: 0;
+	transition: opacity 500ms;
+  }
+
 /* Specific element stylings */
 
 .face-target-count-name {
