--- a/src/App.css
+++ b/src/App.css
@@ -280,5 +280,12 @@ p {
 	border-radius: 50%;
 	margin: 5px;
 	cursor: pointer;
+	opacity: 1;
+	filter: invert(0%);
 	box-shadow: 2px 2px 20px 2px rgba(0, 0, 0, 0.3);
+	transition: filter 0.5s ease-in-out;
+}
+
+.dice-image:hover {
+	filter: invert(90%) brightness(110%);
 }
