--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,30 @@
 	margin: 0.5rem;
 }
 
+.dice-faces-enter {
+	opacity: 0;
+}
+.dice-faces-enter-active {
+	opacity: 1;
+	transition: opacity 200ms;
+}
+
+.dice-faces-enter-done {
+	opacity: 1;
+}
+
+.dice-faces-exit {
+	opacity: 1;
+}
+.dice-faces-exit-active {
+	opacity: 0;
+	transition: opacity 200ms;
+}
+
+.dice-faces-exit-done {
+	opacity: 0;
+}
+
 /* Controllable Component stylings*/
 
 .select-input {
@@ -15,9 +39,9 @@
 	height: auto;
 	font-family: Nunito;
 	color: #282c34;
-	margin: 1rem 0.5rem;
 }
 
 .select-calculation-type {
 	width: 14rem;
+	margin-top: 0.25rem;
 }
