--- a/src/App.css
+++ b/src/App.css
@@ -15,9 +15,14 @@
 	height: auto;
 	font-family: Nunito;
 	color: #282c34;
+	z-index: 10;
 }
 
 .select-calculation-type {
 	width: 14rem;
 	margin-top: 0.25rem;
+}
+
+.select-face-target.select-input {
+	z-index: 10;
 }
